--- a/index.css
+++ b/index.css
@@ -1,14 +1,27 @@
 body {
     background-image: url(./background\ image.jpeg);
     text-align: center;
-    width: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: serif;
     font-weight: bold;
     color: white;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20%;
 }
 
 h1 {
     letter-spacing: 1px;
     text-align: center;
+    font-size: 60px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 10px;
+}
+
+.timer {
+    border: 2px solid white;
+    background-color: white;
+    color: black;
     font-size: 50px;
 }
