--- a/index.css
+++ b/index.css
@@ -4,10 +4,7 @@ body {
     font-family: serif;
     font-weight: bold;
     color: white;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20%;
+		min-height: 100vh;
 }
 
 h1 {
@@ -19,9 +16,21 @@ h1 {
     padding-bottom: 10px;
 }
 
-.timer {
+#hours, #minutes, #seconds {
     border: 2px solid white;
     background-color: white;
     color: black;
     font-size: 50px;
+		text-align: center;
+		margin: 15px;
+		border-radius: 10px;
+}
+
+#hours::after, #minites::after{
+	content: ":";
+	font-size: 75px;
+	color: white;
+	position: absolute;
+	left: 93px;
+
 }
